--- a/sub.html
+++ b/sub.html
@@ -131,7 +131,7 @@
             <div class="full_inner">
                 <span class="material-symbols-outlined" id="close">close</span>
                 <div class="player_box">
-                    <div id="player1"></div>
+                    <div id="player"></div>
                 </div>
                 <p class="article_title">센과 치히로의 행방불명 | 멀티 오디오 영상: 숨을 참아, 치히로! | Netflix</p>
             </div>
@@ -234,7 +234,12 @@
         <article id="character">
             <div class="full_inner">
                 <h3 class="article_category">등장인물</h3>
-                
+                <div class="inner">
+                    <section>
+                        <!--JS Character Data-->
+                    </section>
+               
+                </div>
             </div>
         </article>
 
@@ -329,7 +334,7 @@
             </div>
         </footer>
     </div>
-    <script src="js/sub.js"></script>
+    <script type="module" src="js/sub.js"></script>
 </body>
 
 </html>
