--- a/sub.html
+++ b/sub.html
@@ -133,7 +133,6 @@
                 <div class="player_box">
                     <div id="player"></div>
                 </div>
-                <p class="article_title">센과 치히로의 행방불명 | 멀티 오디오 영상: 숨을 참아, 치히로! | Netflix</p>
             </div>
             </article>
 
@@ -142,22 +141,22 @@
             <div class="inner">
                 <h3 class="article_category">영화 프로필</h3>
                 <div class="box_align">
-                    <div class="profile_box">
+                    <div class="profile_box to-top delay-0">
                         <h3 class="article_title">제작사</h3>
                         <p class="article_content">지브리 스튜디오</p>
                     </div>
-                    <div class="profile_box">
+                    <div class="profile_box to-top delay-1">
                         <h3 class="article_title">배급사</h3>
                         <p class="article_content">대한민국: 키다리이엔티<br>
                             일본: 도호</p>
                     </div>
-                    <div class="profile_box">
+                    <div class="profile_box to-top delay-2">
                         <h3 class="article_title">감독&middot;각본</h3>
                         <p class="article_content">미야자키 하야오</p>
                         <h3 class="article_title titletop">프로듀서</h3>
                         <p class="article_content">스즈키 토시오</p>
                     </div>
-                    <div class="profile_box">
+                    <div class="profile_box to-top delay-3">
                         <h3 class="article_title">개봉</h3>
                         <p class="article_content">대한민국: 2022년 6월 28일<br>
                             재개봉: 2015년 6월 28일<br>
@@ -247,16 +246,16 @@
         <article id="music">
             <div class="inner">
                 <h3 class="article_category">음악</h3>
-                <p class="article_content">주제곡 ‘언제나 몇 번이라도’를 제외한 모든 삽입곡은
+                <p class="article_content to-top delay-0">주제곡 ‘언제나 몇 번이라도’를 제외한 모든 삽입곡은
                     작곡가 히사이시 조에 의해 탄생했다.
                     현재도 많이 사랑받는 음악들로, 다양한 매체에서 사용되고 있으며, 
                     각 캐릭터의 서사를 떠오르게 하는 아름다운 테마곡들이 특징이다.
                 </p>
-                <div class="music_box">
+                <div class="music_box to-top delay-0">
                     <a href="https://www.youtube.com/watch?v=TK1Ij_-mank" target="_blank"><span class="material-symbols-outlined">headphones</span></a>
                     <img id="music_img" src="img/sub/music.jpg" alt="music">
                 </div>
-                <p class="article_content music_name">음악: 어느 여름날</p>
+                <p class="article_content music_name ">음악: 어느 여름날</p>
             </div>
         </article>
         
@@ -265,27 +264,27 @@
             <div class="inner">
                 <h3 class="article_category">수상</h3>
                 <div class="award_box">
-                    <div>
+                    <div class="to-top delay-0">
                         <p class="award_name">황금곰상</p>
                         <p class="year">2002</p>
                     </div>
-                    <div>
+                    <div class="to-top delay-1">
                         <p class="award_name">아카데미 장편 애니메이션상</p>
                         <p class="year">2003</p>
                     </div>
-                    <div>
+                    <div class="to-top delay-2">
                         <p class="award_name">일본 아카데미 작품상</p>
                         <p class="year">2003</p>
                     </div>
-                    <div>
+                    <div class="to-top delay-3">
                         <p class="award_name">크리스틱 초이스 영화상 최우수 장편 애니메이션상</p>
                         <p class="year">2003</p>
                     </div>
-                    <div>
+                    <div class="to-top delay-4">
                         <p class="award_name">새틀라이트상 애니메이션 및 복합 미디어 영화상</p>
                         <p class="year">2003</p>
                     </div>
-                    <div>
+                    <div  class="to-top delay-5">
                         <p class="award_name">홍콩 영화 금상장 아시아영화상</p>
                         <p class="year">2003</p>
                     </div>
@@ -335,6 +334,8 @@
         </footer>
     </div>
     <script type="module" src="js/sub.js"></script>
+    <script src="js/youtube.js"></script>
+    <script src="js/common.js"></script>
 </body>
 
 </html>
