--- a/sub.html
+++ b/sub.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/sub.css">
+    <link rel="stylesheet" href="css/sub_tablet.css">
     <link rel="icon" href="img/favicon.png">
 
 </head>
@@ -158,7 +159,7 @@
                     </div>
                     <div class="profile_box to-top delay-3">
                         <h3 class="article_title">개봉</h3>
-                        <p class="article_content">대한민국: 2022년 6월 28일<br>
+                        <p class="article_content">대한민국: 2002년 6월 28일<br>
                             재개봉: 2015년 6월 28일<br>
                             일본: 2001년 7월 20일</p>
                     </div>
@@ -171,7 +172,7 @@
             <div class="full_inner">
 
                 <h3 class="article_category">시놉시스</h3>
-                <section>
+                <section class="to-left delay-0">
                         <div class="synopsis_box synopsis_img"></div>
                         <div class="synopsis_box synopsis_content">
                             <h1>01</h1>
@@ -234,7 +235,7 @@
             <div class="full_inner">
                 <h3 class="article_category">등장인물</h3>
                 <div class="inner">
-                    <section>
+                    <section class="to-top delay-0">
                         <!--JS Character Data-->
                     </section>
                
@@ -255,7 +256,7 @@
                     <a href="https://www.youtube.com/watch?v=TK1Ij_-mank" target="_blank"><span class="material-symbols-outlined">headphones</span></a>
                     <img id="music_img" src="img/sub/music.jpg" alt="music">
                 </div>
-                <p class="article_content music_name ">음악: 어느 여름날</p>
+                <p class="article_content music_name to-one">음악: 어느 여름날</p>
             </div>
         </article>
         
@@ -276,20 +277,20 @@
                         <p class="award_name">일본 아카데미 작품상</p>
                         <p class="year">2003</p>
                     </div>
-                    <div class="to-top delay-3">
+                    <div class="to-top delay-0">
                         <p class="award_name">크리스틱 초이스 영화상 최우수 장편 애니메이션상</p>
                         <p class="year">2003</p>
                     </div>
-                    <div class="to-top delay-4">
+                    <div class="to-top delay-1">
                         <p class="award_name">새틀라이트상 애니메이션 및 복합 미디어 영화상</p>
                         <p class="year">2003</p>
                     </div>
-                    <div  class="to-top delay-5">
+                    <div  class="to-top delay-2">
                         <p class="award_name">홍콩 영화 금상장 아시아영화상</p>
                         <p class="year">2003</p>
                     </div>
                 </div>
-                <p class="article_content">그 외 다수</p>
+                <p class="article_content to-one">그 외 다수</p>
             </div>
         </article>
 
