--- a/sub.html
+++ b/sub.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/sub.css">
     <link rel="stylesheet" href="css/sub_tablet.css">
+    <link rel="stylesheet" href="css/sub_cellphone.css">
     <link rel="icon" href="img/favicon.png">
 
 </head>
@@ -173,48 +174,56 @@
 
                 <h3 class="article_category">시놉시스</h3>
                 <section class="to-left delay-0">
-                        <div class="synopsis_box synopsis_img"></div>
-                        <div class="synopsis_box synopsis_content">
-                            <h1>01</h1>
-                            <h4>신들의 세계로</h4>
-                            <p class="article_content">시골로 이사하게 되어 운전하던
-                                치히로의 아버지는 순간 길을 잘못들어
-                                의문의 터널 앞에 도착한다.
-                                가족들은 이끌리듯 그 터널을 건너
-                                신들의 세계에 들어가게 된다.
-                            </p>
+                        <div class="synGroup">
+                            <div class="synopsis_box synopsis_img"></div>
+                            <div class="synopsis_box synopsis_content">
+                                <h1>01</h1>
+                                <h4>신들의 세계로</h4>
+                                <p class="article_content">시골로 이사하게 되어 운전하던
+                                    치히로의 아버지는 순간 길을 잘못들어
+                                    의문의 터널 앞에 도착한다.
+                                    가족들은 이끌리듯 그 터널을 건너
+                                    신들의 세계에 들어가게 된다.
+                                </p>
+                            </div>
                         </div>
                     
-                    <div class="synopsis_box synopsis_img"></div>
-                    <div class="synopsis_box synopsis_content">
-                        <h1>02</h1>
-                        <h4>돼지가 되어버린 부모님</h4>
-                        <p class="article_content">허락없이 그 곳의 음식을 먹은
-                            부모님은 돼지가 되어버리고,
-                            치히로는 놀라 도망치다 주변이 점점 어두워지고,
-                            자신이 투명하게 사라지고 있다는 것을 알게된다.
-                        </p>
+                    <div class="synGroup">
+                        <div class="synopsis_box synopsis_img"></div>
+                        <div class="synopsis_box synopsis_content">
+                            <h1>02</h1>
+                            <h4>돼지가 되어버린 부모님</h4>
+                            <p class="article_content">허락없이 그 곳의 음식을 먹은
+                                부모님은 돼지가 되어버리고,
+                                치히로는 놀라 도망치다 주변이 점점 어두워지고,
+                                자신이 투명하게 사라지고 있다는 것을 알게된다.
+                            </p>
+                        </div>
                     </div>
 
-                    <div class="synopsis_box synopsis_img"></div>
-                    <div class="synopsis_box synopsis_content">
-                        <h1>03</h1>
-                        <h4>신비한 소년, 하쿠</h4>
-                        <p class="article_content">겁에 질린 치히로에게 다가온 
-                            신비한 소년 하쿠는 치히로에게 이 세계의 음식을 먹여 사라지지 않게 도와주고,
-                            여관에 잠입할 수 있도록 도와준다.
-                        </p>
+                    <div class="synGroup">
+                        <div class="synopsis_box synopsis_img"></div>
+                        <div class="synopsis_box synopsis_content">
+                            <h1>03</h1>
+                            <h4>신비한 소년, 하쿠</h4>
+                            <p class="article_content">겁에 질린 치히로에게 다가온
+                                신비한 소년 하쿠는 치히로에게 이 세계의 음식을 먹여 사라지지 않게 도와주고,
+                                여관에 잠입할 수 있도록 도와준다.
+                            </p>
+                        </div>
                     </div>
 
-                    <div class="synopsis_box synopsis_img"></div>
-                    <div class="synopsis_box synopsis_content">
-                        <h1>04</h1>
-                        <h4>신들의 목욕탕</h4>
-                        <p class="article_content">
-                            치히로는 목욕탕의 주인 유바바에게 센이라는 새로운 이름을 받고
-                            그 곳에서 일하게 된다. 
-                            과연 센은 부모님을 구하고 인간세상으로 돌아갈 수 있을까?
-                        </p>
+                    <div class="synGroup">
+                        <div class="synopsis_box synopsis_img"></div>
+                        <div class="synopsis_box synopsis_content">
+                            <h1>04</h1>
+                            <h4>신들의 목욕탕</h4>
+                            <p class="article_content">
+                                치히로는 목욕탕의 주인 유바바에게 센이라는 새로운 이름을 받고
+                                그 곳에서 일하게 된다.
+                                과연 센은 부모님을 구하고 인간세상으로 돌아갈 수 있을까?
+                            </p>
+                        </div>
                     </div>
                 </section>
                 <!--scrollbar-->
@@ -235,7 +244,7 @@
             <div class="full_inner">
                 <h3 class="article_category">등장인물</h3>
                 <div class="inner">
-                    <section class="to-top delay-0">
+                    <section>
                         <!--JS Character Data-->
                     </section>
                
