--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/main.js"></script>
     </div>
 </body>
