--- a/sub.html
+++ b/sub.html
@@ -31,12 +31,10 @@
                 <div id="logo">
                     <a href="#">
                         <div id="logo_img">
-                            <img id="logo_img_blue" class="header-middle" src="img/main/ghibli_logo_blue.png"
-                                alt="ghibli_logo">
-                            <img id="logo_img_white" class="header-middle" src="img/main/ghibli_logo_white.png"
-                                alt="ghibli_logo">
+                            <img id="logo_img_blue" class="header-middle hdChange" src="img/main/ghibli_logo_blue.png" alt="ghibli_logo">
+                            <img id="logo_img_white" class="header-middle hdChange" src="img/main/ghibli_logo_white.png" alt="ghibli_logo">
                         </div>
-                        <span id="logo_text" class="header-middle">Ghibli World</span>
+                        <span id="logo_text" class="header-middle hdChange">Ghibli World</span>
                     </a>
                     <div class="hamburger_menu" id="hamburger_menu_click">
                         <span class="header-middle"></span>
@@ -45,31 +43,31 @@
                     </div>
                 </div>
                 <ul id="category">
-                    <li class="first_category">스튜디오 지브리
+                    <li class="first_category hdChange">스튜디오 지브리
                         <ul class="second_category">
-                            <li><a href="javascript:void(0)">스튜디오 지브리 소개</a></li>
-                            <li><a href="javascript:void(0)">스튜디오 지브리 연혁</a></li>
-                            <li><a href="javascript:void(0)">스튜디오 지브리 연표</a></li>
+                            <li><a href="./index.html">스튜디오 지브리 소개</a></li>
+                            <li><a href="./index.html">스튜디오 지브리 연혁</a></li>
+                            <li><a href="./index.html">스튜디오 지브리 연표</a></li>
                         </ul>
                     </li>
-                    <li class="first_category">애니메이션
+                    <li class="first_category hdChange">애니메이션
                         <ul class="second_category">
-                            <li><a href="javascript:void(0)">1980년대</a></li>
-                            <li><a href="javascript:void(0)">1990년대</a></li>
-                            <li><a href="javascript:void(0)">2000년대</a></li>
-                            <li><a href="javascript:void(0)">2010년대~</a></li>
+                            <li><a href="./index.html">1980년대</a></li>
+                            <li><a href="./index.html">1990년대</a></li>
+                            <li><a href="./index.html">2000년대</a></li>
+                            <li><a href="./index.html">2010년대~</a></li>
                         </ul>
                     </li>
-                    <li class="first_category">지브리 여행지
+                    <li class="first_category hdChange">지브리 여행지
                         <ul class="second_category">
-                            <li><a href="javascript:void(0)">지브리 파크</a></li>
-                            <li><a href="javascript:void(0)">지브리 미술관</a></li>
+                            <li><a href="./index.html">지브리 파크</a></li>
+                            <li><a href="./index.html">지브리 미술관</a></li>
                         </ul>
                     </li>
-                    <li class="first_category" id="language_select">
+                    <li class="first_category hdChange" id="language_select">
                         <span>
-                            <span class="material-icons" id="language_icon">language</span>
-                            <span id="language-korean">한국어</span>
+                            <span class="material-icons hdChange" id="language_icon">language</span>
+                            <span class="hdChange" id="language-korean">한국어</span>
                         </span>
                         <ul class="second_category">
                             <li id="language-english">English</li>
@@ -80,31 +78,31 @@
             <div id="category_wrap">
                 <div class="inner">
                     <ul id="category-middle">
-                        <li class="first_category-middle">스튜디오 지브리<span class="plus">+</span>
+                        <li class="first_category-middle ctopen">스튜디오 지브리<span class="plus">+</span>
                             <ul class="second_category-middle">
-                                <li><a href="javascript:void(0)">스튜디오 지브리 소개</a></li>
-                                <li><a href="javascript:void(0)">스튜디오 지브리 연혁</a></li>
-                                <li><a href="javascript:void(0)">스튜디오 지브리 연표</a></li>
+                                <li><a href="./index.html">스튜디오 지브리 소개</a></li>
+                                <li><a href="./index.html">스튜디오 지브리 연혁</a></li>
+                                <li><a href="./index.html">스튜디오 지브리 연표</a></li>
                             </ul>
                         </li>
-                        <li class="first_category-middle">애니메이션<span class="plus">+</span>
+                        <li class="first_category-middle ctopen">애니메이션<span class="plus">+</span>
                             <ul class="second_category-middle ">
-                                <li><a href="javascript:void(0)">1980년대</a></li>
-                                <li><a href="javascript:void(0)">1990년대</a></li>
-                                <li><a href="javascript:void(0)">2000년대</a></li>
-                                <li><a href="javascript:void(0)">2010년대~</a></li>
+                                <li><a href="./index.html">1980년대</a></li>
+                                <li><a href="./index.html">1990년대</a></li>
+                                <li><a href="./index.html">2000년대</a></li>
+                                <li><a href="./index.html">2010년대~</a></li>
                             </ul>
                         </li>
-                        <li class="first_category-middle">지브리 여행지<span class="plus">+</span>
+                        <li class="first_category-middle ctopen">지브리 여행지<span class="plus">+</span>
                             <ul class="second_category-middle">
-                                <li><a href="javascript:void(0)">지브리 파크</a></li>
-                                <li><a href="javascript:void(0)">지브리 미술관</a></li>
+                                <li><a href="./index.html">지브리 파크</a></li>
+                                <li><a href="./index.html">지브리 미술관</a></li>
                             </ul>
                         </li>
-                        <li class="first_category-middle" id="language_select-middle">
-                            <span>
-                                <span class="material-icons" id="language_icon-middle">language</span>
-                                <span id="language-korean-middle">한국어</span>
+                        <li class="first_category-middle ctopen" id="language_select-middle">
+                            <span class="ctopen">
+                                <span class="material-icons ctopen" id="language_icon-middle">language</span>
+                                <span id="language-korean-middle" class="ctopen">한국어</span>
                             </span>
                             <span class="plus">+</span>
                             <ul class="second_category-middle">
@@ -343,9 +341,9 @@
             </div>
         </footer>
     </div>
+    <script src="js/common.js"></script>
     <script type="module" src="js/sub.js"></script>
     <script src="js/youtube.js"></script>
-    <script src="js/common.js"></script>
 </body>
 
 </html>
