--- a/sub.html
+++ b/sub.html
@@ -226,7 +226,7 @@
                 </section>
                 <!--scrollbar-->
                 <div id="scrollbar">
-                    <input type="range", id="story_scroll" value="0" min="0" max="100" >
+                    <input type="range" id="story_scroll" value="0" min="0" max="100">
                     <div class="circle_box">
                         <div class="circle active"></div>
                         <div class="circle small"></div>
