fix: sub Page link 수정

--- a/sub.html
+++ b/sub.html
@@ -29,7 +29,7 @@
         <header class="header-middle">
             <div class="inner">
                 <div id="logo">
-                    <a href="#">
+                    <a href="./index.html">
                         <div id="logo_img">
                             <img id="logo_img_blue" class="header-middle hdChange" src="img/main/ghibli_logo_blue.png" alt="ghibli_logo">
                             <img id="logo_img_white" class="header-middle hdChange" src="img/main/ghibli_logo_white.png" alt="ghibli_logo">
